# sport-progress-system

./: .gitignore  Dockerfile  Makefile  Spacefile  constants.base.py  firebase.py  main.py  pyproject.toml  requirements.txt
ansible/: README.md  ansible.cfg  code-deploy.yml  hosts.ini
ansible/roles/base/defaults/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/base/templates/: constants.py.j2
api/: exercise.py  language.py  root.py  workout_item.py
sql_app/: crud.py  main.py  models.py  schemas.py
templates/: base.html  chartBuilder.js
