[tool.poetry]
name = "sport-progress-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License v.2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.75.1"}
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
